src/tests/snapshots/event_query_lang__tests__parser__parse_from_events_with_top_identity_projection.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
  scope: 1
  tpe: Unspecified
sources:
  - binding: e
    kind:
      Name: events
predicate: ~
group_by: ~
order_by:
  expr:
    attrs:
      pos:
        line: 2
        col: 10
      scope: 1
      tpe: Unspecified
    value:
      Access:
        target:
          attrs:
            pos:
              line: 2
              col: 10
            scope: 1
            tpe: Unspecified
          value:
            Id: e
        field: time
  order: Desc
limit:
  Top: 100
projection:
  attrs:
    pos:
      line: 4
      col: 14
    scope: 1
    tpe: Unspecified
  value:
    Id: e
