src/tests/snapshots/event_query_lang__tests__parser__parser_unhinged_unary_op.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
  scope: 1
  tpe: Unspecified
sources:
  - binding: e
    kind:
      Name: events
predicate:
  attrs:
    pos:
      line: 2
      col: 7
    scope: 1
    tpe: Unspecified
  value:
    Unary:
      operator: Not
      expr:
        attrs:
          pos:
            line: 2
            col: 11
          scope: 1
          tpe: Unspecified
        value:
          Unary:
            operator: Not
            expr:
              attrs:
                pos:
                  line: 2
                  col: 15
                scope: 1
                tpe: Unspecified
              value:
                Unary:
                  operator: Not
                  expr:
                    attrs:
                      pos:
                        line: 2
                        col: 19
                      scope: 1
                      tpe: Unspecified
                    value:
                      Access:
                        target:
                          attrs:
                            pos:
                              line: 2
                              col: 19
                            scope: 1
                            tpe: Unspecified
                          value:
                            Id: e
                        field: enabled
group_by: ~
order_by: ~
limit: ~
projection:
  attrs:
    pos:
      line: 3
      col: 14
    scope: 1
    tpe: Unspecified
  value:
    Id: e
